# hotspotobserverISL

./: CMakeLists.txt  README.md  manifest.xml
src/: main.cpp
